Add required tag

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <label >
         <p class="font-bold text-3xl">Name</p>
-        <input type="text" placeholder="Enter your name" id="username" class="py-2 bg-white border border-gray-300 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block  p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <input type="text" placeholder="Enter your name" id="username" class="py-2 bg-white border border-gray-300 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block  p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
     </label>
 
 <div class="py-5 ">
     <p class="text-2xl"> Enter the following code into the input : <span id="captcha" class="font-bold text-2xl mr-5"></span> </p>
-    <input type="text" placeholder="Enter captcha key" id="code" class="py-2 bg-gray-50 border border-gray-300 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 ">
+    <input type="text" placeholder="Enter captcha key" id="code" class="py-2 bg-gray-50 border border-gray-300 text-gray-100 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 " required>
 </div>
     <input type="submit" placeholder="Post" class="text-xl bg-blue-500 text-white hover:bg-red-500 py-2 px-4 rounded">
 
@@ -54,7 +54,7 @@ form.addEventListener("submit", (e)=>{
     
     if(code == key){
         message.style.color="green"
-        message.innerHTML= `Welcome ${username}` 
+        message.innerHTML= `Welcome ${username}.` 
     }
     else{
         message.style.color="red"
